force-app/main/default/objects/CATT_Request__c/CATT_Request__c.object-meta.xml
<CustomObject>
    <label>CATT Request</label>
    <nameField>
        <label>CATT Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CATT Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>