force-app/main/default/objects/CATT_Request__c/fields/AOV_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>AOV_at_Risk__c</fullName>
    <label>AOV at Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>