force-app/main/default/objects/CATT_Request__c/fields/AOV_Saved_Lost__c.field-meta.xml
<CustomField>
    <fullName>AOV_Saved_Lost__c</fullName>
    <label>AOV Saved/Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>