force-app/main/default/objects/CATT_Request__c/fields/CATT_Request_Age__c.field-meta.xml
<CustomField>
    <fullName>CATT_Request_Age__c</fullName>
    <formula>IF( ISNULL( CATT_Work_End_Date__c ) , (TODAY() - CATT_Work_Start_Date__c ), ( CATT_Work_End_Date__c - CATT_Work_Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CATT Request Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>