force-app/main/default/objects/CATT_Request__c/fields/CATT_Work_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CATT_Work_Start_Date__c</fullName>
    <label>CATT Work Start Date</label>
    <type>Date</type>
</CustomField>