force-app/main/default/objects/CATT_Request__c/fields/CFL_Region__c.field-meta.xml
<CustomField>
    <fullName>CFL_Region__c</fullName>
    <label>CFL Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>