force-app/main/default/objects/CATT_Request__c/fields/CreateQuip__c.field-meta.xml
<CustomField>
    <fullName>CreateQuip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreateQuip</label>
    <type>Checkbox</type>
</CustomField>