force-app/main/default/objects/CATT_Request__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>