force-app/main/default/objects/CATT_Request__c/fields/Days_to_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Recommendation__c</fullName>
    <formula>IF( ISNULL( CATT_Work_Start_Date__c ) , 0 , ( Recommendation_Delivery_Date__c - CATT_Work_Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Recommendation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>