force-app/main/default/objects/CATT_Request__c/fields/Exec_Summary__c.field-meta.xml
<CustomField>
    <fullName>Exec_Summary__c</fullName>
    <label>Exec Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>