force-app/main/default/objects/CATT_Request__c/fields/In_Focus__c.field-meta.xml
<CustomField>
    <fullName>In_Focus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Focus</label>
    <type>Checkbox</type>
</CustomField>