force-app/main/default/objects/CATT_Request__c/fields/Org62_Id__c.field-meta.xml
<CustomField>
    <fullName>Org62_Id__c</fullName>
    <description>CAE_Request Id from Org 62</description>
    <externalId>true</externalId>
    <label>Org62 Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>