force-app/main/default/objects/CATT_Request__c/fields/Post_Engagement_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Post_Engagement_CSAT__c</fullName>
    <label>Post Engagement CSAT</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>