force-app/main/default/objects/CATT_Request__c/fields/Recommendation_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Delivery_Date__c</fullName>
    <label>Recommendation Delivery Date</label>
    <type>Date</type>
</CustomField>