force-app/main/default/objects/CATT_Request__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AOV at risk too low</fullName>
            </value>
            <value>
                <fullName>Not a technical fit (PM required)</fullName>
            </value>
            <value>
                <fullName>Services engagement required</fullName>
            </value>
            <value>
                <fullName>CATT no longer needed</fullName>
            </value>
            <value>
                <fullName>Routed to Technical support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Routed to HRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>