force-app/main/default/objects/CATT_Request__c/fields/Result_Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Result_Lessons_Learned__c</fullName>
    <label>Result/Lessons Learned</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>