force-app/main/default/objects/CATT_Request__c/fields/Total_Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Spent__c</fullName>
    <label>Total Hours Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>