force-app/main/default/objects/CATT_Request__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functional (Declarative/Configuration)</fullName>
            </value>
            <value>
                <fullName>Technical (Apex, VisualForce, API)</fullName>
            </value>
            <value>
                <fullName>Best Practices Review</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Other (Please describe)</fullName>
            </value>
            <value>
                <fullName>Performance/Scalability Investigation</fullName>
            </value>
            <value>
                <fullName>Peak Readiness Screening Request</fullName>
            </value>
            <value>
                <fullName>Frontier Scale</fullName>
            </value>
            <value>
                <fullName>Frontier Scale Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>